<resources>
    <string name="app_name">Dockaan Staff</string>
    <string name="title_activity_main" translatable="false">Dekaneh Staff</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="owner_name">Owner Name</string>
    <string name="client_name">Client Name</string>
    <string name="update">Update</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price</string>
    <string name="email">Email</string>
    <string name="shop_name">Shop Name</string>
    <string name="orders">Orders</string>
    <string name="clients">Clients</string>
    <string name="logout">Logout</string>
    <string name="refresh">refresh</string>
    <string name="location">Location</string>
    <string name="notes">Notes</string>
    <string name="horeca">Horeca</string>
    <string name="whole_sale">Whole sale</string>
    <string name="activated">Activated</string>
    <string name="deactivated">Deactivated</string>
    <string name="pending">Pending</string>
    <string name="edit_location_text">Edit Client Location</string>
    <string name="new_clients">New clients</string>
    <string name="in_delivery">In Delivery</string>
    <string name="delivered">Delivered</string>
    <string name="cancel">Cancel</string>
    <string name="all_orders">All Orders</string>
    <string name="api_default_error">An error occured</string>
    <string name="user_not_activated_error">Your account is not activated</string>

    <string name="name">Name</string>
    <string name="stock">Stock</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="packed">Packed</string>
    <string name="pending_delivery">Pending Deilvery</string>
    <string name="cost">Cost</string>
    <string name="status">Status</string>
    <string name="pieces">pieces</string>
    <string name="shop_owner_name">Shope Owner Name</string>
    <string name="no_orders">There is no orders...</string>
    <string name="no_stock">There is no stock...</string>

    <string name="pack">Pack</string>
    <string name="report">Report to admin</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok_button">yes</string>

</resources>
