<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/paige2"
        app:layout_constraintBottom_toTopOf="@+id/guidline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/shopOwnerNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textColor="@color/light_gray_text_color"
            android:textDirection="locale"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shopOwnerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/shop_owner_name"
            android:textColor="@color/gray_text_color"
            android:textDirection="locale"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopOwnerNameText" />


        <TextView
            android:id="@+id/shopNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/shop_name"
            android:textColor="@color/light_gray_text_color"
            android:textDirection="locale"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopOwnerName" />

        <TextView
            android:id="@+id/shopName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/shop_name"
            android:textColor="@color/gray_text_color"
            android:textDirection="locale"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopNameText" />

        <TextView
            android:id="@+id/coseText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="24dp"
            android:text="@string/cost"
            android:textColor="@color/light_gray_text_color"
            android:textDirection="locale"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/shopOwnerName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="80,000"
            android:textColor="@color/gray_text_color"
            android:textDirection="locale"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/coseText"
            app:layout_constraintTop_toBottomOf="@+id/coseText" />


        <TextView
            android:id="@+id/statusText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/status"
            android:textColor="@color/light_gray_text_color"
            android:textDirection="locale"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/cost"
            app:layout_constraintTop_toBottomOf="@+id/cost" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:textColor="@color/gray_text_color"
            android:textDirection="locale"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/statusText"
            app:layout_constraintTop_toBottomOf="@+id/statusText" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guidline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recylcerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidline1" />

</android.support.constraint.ConstraintLayout>