<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clientDetailsBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="-8dp"
    android:layout_marginEnd="-8dp"
    android:background="@drawable/shadow_card_black"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageView
        android:id="@+id/clientEditCloseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_close_black_24dp" />

    <TextView
        style="@style/PrimaryBlackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:text="@string/client_name"
        android:textSize="22sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/loginPhoneCard"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shadow_card_black"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/ic_local_phone_green_24dp" />

                <EditText
                    android:id="@+id/clientPhoneNumber"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxHeight="40dp"
                    android:textAlignment="viewStart"
                    android:textColorHint="@color/light_gray" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shadow_card_black"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/ic_person_gray_24dp" />

                <EditText
                    android:id="@+id/clientName"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:hint="@string/owner_name"
                    android:inputType="textPersonName"
                    android:maxHeight="40dp"
                    android:textAlignment="viewStart"
                    android:textColorHint="@color/light_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shadow_card_black"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/ic_store_gray_24dp" />

                <EditText
                    android:id="@+id/clientShopName"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:hint="@string/shop_name"
                    android:inputType="textCapWords"
                    android:maxHeight="40dp"
                    android:textAlignment="viewStart"
                    android:textColorHint="@color/light_gray" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shadow_card_black"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/ic_location_on_gray_24dp" />

                <EditText
                    android:id="@+id/clientLocationString"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:hint="@string/location"
                    android:inputType="textCapWords"
                    android:maxHeight="40dp"
                    android:textAlignment="viewStart"
                    android:textColorHint="@color/light_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shadow_card_black"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/ic_location_on_gray_24dp" />

                <Spinner
                    android:id="@+id/clientAreasSpinner"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shadow_card_black"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/clientTypeSpinner"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shadow_card_black"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/clientStatusSpinner"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shadow_card_black"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/ic_email_black_24dp" />

                <EditText
                    android:id="@+id/clientNotesString"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:hint="@string/location"
                    android:inputType="textCapWords"
                    android:maxHeight="40dp"
                    android:textAlignment="viewStart"
                    android:textColorHint="@color/light_gray" />

            </LinearLayout>


            <TextView
                android:id="@+id/clientLocationPoint"
                style="@style/PrimaryBlackTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/edit_location_text" />


            <Button
                android:id="@+id/updateClientBtn"
                style="@style/WhiteBlackTextView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/brown_button_round_10"
                android:text="@string/update"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>